sdk-docs_versioned_docs/version-24.1.x/modules/API/Procedures/Types/Types.md
---
id: "Types"
title: "Module: Procedures Types"
sidebar_label: "Types"
---

## Enumerations

- [AllowanceOperation](../../../../enums/API/Procedures/Types/AllowanceOperation/AllowanceOperation.md)
- [ClaimOperation](../../../../enums/API/Procedures/Types/ClaimOperation/ClaimOperation.md)
- [InstructionAffirmationOperation](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md)
- [TransferRestrictionType](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md)

## Interfaces

- [AcceptPrimaryKeyRotationParams](../../../../interfaces/API/Procedures/Types/AcceptPrimaryKeyRotationParams/AcceptPrimaryKeyRotationParams.md)
- [AddAssetRequirementParams](../../../../interfaces/API/Procedures/Types/AddAssetRequirementParams/AddAssetRequirementParams.md)
- [AddClaimsParams](../../../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md)
- [AddInstructionsParams](../../../../interfaces/API/Procedures/Types/AddInstructionsParams/AddInstructionsParams.md)
- [AddInvestorUniquenessClaimParams](../../../../interfaces/API/Procedures/Types/AddInvestorUniquenessClaimParams/AddInvestorUniquenessClaimParams.md)
- [AssetBase](../../../../interfaces/API/Procedures/Types/AssetBase/AssetBase.md)
- [AssetMediatorParams](../../../../interfaces/API/Procedures/Types/AssetMediatorParams/AssetMediatorParams.md)
- [AttestPrimaryKeyRotationParams](../../../../interfaces/API/Procedures/Types/AttestPrimaryKeyRotationParams/AttestPrimaryKeyRotationParams.md)
- [ClaimCountTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md)
- [ClaimPercentageTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md)
- [ConfigureDividendDistributionParams](../../../../interfaces/API/Procedures/Types/ConfigureDividendDistributionParams/ConfigureDividendDistributionParams.md)
- [ControllerTransferParams](../../../../interfaces/API/Procedures/Types/ControllerTransferParams/ControllerTransferParams.md)
- [CountTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md)
- [CreateAssetParams](../../../../interfaces/API/Procedures/Types/CreateAssetParams/CreateAssetParams.md)
- [CreateAssetWithTickerParams](../../../../interfaces/API/Procedures/Types/CreateAssetWithTickerParams/CreateAssetWithTickerParams.md)
- [CreateCheckpointScheduleParams](../../../../interfaces/API/Procedures/Types/CreateCheckpointScheduleParams/CreateCheckpointScheduleParams.md)
- [CreateChildIdentitiesParams](../../../../interfaces/API/Procedures/Types/CreateChildIdentitiesParams/CreateChildIdentitiesParams.md)
- [CreateChildIdentityParams](../../../../interfaces/API/Procedures/Types/CreateChildIdentityParams/CreateChildIdentityParams.md)
- [CreateGroupParams](../../../../interfaces/API/Procedures/Types/CreateGroupParams/CreateGroupParams.md)
- [CreateMultiSigParams](../../../../interfaces/API/Procedures/Types/CreateMultiSigParams/CreateMultiSigParams.md)
- [CreateNftCollectionParams](../../../../interfaces/API/Procedures/Types/CreateNftCollectionParams/CreateNftCollectionParams.md)
- [CreateTransactionBatchParams](../../../../interfaces/API/Procedures/Types/CreateTransactionBatchParams/CreateTransactionBatchParams.md)
- [CreateVenueParams](../../../../interfaces/API/Procedures/Types/CreateVenueParams/CreateVenueParams.md)
- [DecreaseAllowanceParams](../../../../interfaces/API/Procedures/Types/DecreaseAllowanceParams/DecreaseAllowanceParams.md)
- [EditClaimsParams](../../../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md)
- [ExecuteManualInstructionParams](../../../../interfaces/API/Procedures/Types/ExecuteManualInstructionParams/ExecuteManualInstructionParams.md)
- [GlobalCollectionKeyInput](../../../../interfaces/API/Procedures/Types/GlobalCollectionKeyInput/GlobalCollectionKeyInput.md)
- [IncreaseAllowanceParams](../../../../interfaces/API/Procedures/Types/IncreaseAllowanceParams/IncreaseAllowanceParams.md)
- [InstructionFungibleLeg](../../../../interfaces/API/Procedures/Types/InstructionFungibleLeg/InstructionFungibleLeg.md)
- [InstructionIdParams](../../../../interfaces/API/Procedures/Types/InstructionIdParams/InstructionIdParams.md)
- [InstructionNftLeg](../../../../interfaces/API/Procedures/Types/InstructionNftLeg/InstructionNftLeg.md)
- [InvestInOfferingParams](../../../../interfaces/API/Procedures/Types/InvestInOfferingParams/InvestInOfferingParams.md)
- [InviteAccountParams](../../../../interfaces/API/Procedures/Types/InviteAccountParams/InviteAccountParams.md)
- [InviteExternalAgentParams](../../../../interfaces/API/Procedures/Types/InviteExternalAgentParams/InviteExternalAgentParams.md)
- [LaunchOfferingParams](../../../../interfaces/API/Procedures/Types/LaunchOfferingParams/LaunchOfferingParams.md)
- [LinkCaDocsParams](../../../../interfaces/API/Procedures/Types/LinkCaDocsParams/LinkCaDocsParams.md)
- [LocalCollectionKeyInput](../../../../interfaces/API/Procedures/Types/LocalCollectionKeyInput/LocalCollectionKeyInput.md)
- [ModifyAssetTrustedClaimIssuersAddSetParams](../../../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersAddSetParams/ModifyAssetTrustedClaimIssuersAddSetParams.md)
- [ModifyAssetTrustedClaimIssuersRemoveParams](../../../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersRemoveParams/ModifyAssetTrustedClaimIssuersRemoveParams.md)
- [ModifyCaCheckpointParams](../../../../interfaces/API/Procedures/Types/ModifyCaCheckpointParams/ModifyCaCheckpointParams.md)
- [ModifyCorporateActionsAgentParams](../../../../interfaces/API/Procedures/Types/ModifyCorporateActionsAgentParams/ModifyCorporateActionsAgentParams.md)
- [ModifyMultiSigParams](../../../../interfaces/API/Procedures/Types/ModifyMultiSigParams/ModifyMultiSigParams.md)
- [ModifyPrimaryIssuanceAgentParams](../../../../interfaces/API/Procedures/Types/ModifyPrimaryIssuanceAgentParams/ModifyPrimaryIssuanceAgentParams.md)
- [ModifySignerPermissionsParams](../../../../interfaces/API/Procedures/Types/ModifySignerPermissionsParams/ModifySignerPermissionsParams.md)
- [MoveFundsParams](../../../../interfaces/API/Procedures/Types/MoveFundsParams/MoveFundsParams.md)
- [NftControllerTransferParams](../../../../interfaces/API/Procedures/Types/NftControllerTransferParams/NftControllerTransferParams.md)
- [PayDividendsParams](../../../../interfaces/API/Procedures/Types/PayDividendsParams/PayDividendsParams.md)
- [PercentageTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md)
- [RedeemNftParams](../../../../interfaces/API/Procedures/Types/RedeemNftParams/RedeemNftParams.md)
- [RedeemTokensParams](../../../../interfaces/API/Procedures/Types/RedeemTokensParams/RedeemTokensParams.md)
- [RegisterCustomClaimTypeParams](../../../../interfaces/API/Procedures/Types/RegisterCustomClaimTypeParams/RegisterCustomClaimTypeParams.md)
- [RegisterIdentityParams](../../../../interfaces/API/Procedures/Types/RegisterIdentityParams/RegisterIdentityParams.md)
- [RemoveAssetRequirementParams](../../../../interfaces/API/Procedures/Types/RemoveAssetRequirementParams/RemoveAssetRequirementParams.md)
- [RemoveCheckpointScheduleParams](../../../../interfaces/API/Procedures/Types/RemoveCheckpointScheduleParams/RemoveCheckpointScheduleParams.md)
- [RemoveCorporateActionParams](../../../../interfaces/API/Procedures/Types/RemoveCorporateActionParams/RemoveCorporateActionParams.md)
- [RemoveExternalAgentParams](../../../../interfaces/API/Procedures/Types/RemoveExternalAgentParams/RemoveExternalAgentParams.md)
- [RemoveSecondaryAccountsParams](../../../../interfaces/API/Procedures/Types/RemoveSecondaryAccountsParams/RemoveSecondaryAccountsParams.md)
- [RenamePortfolioParams](../../../../interfaces/API/Procedures/Types/RenamePortfolioParams/RenamePortfolioParams.md)
- [ReserveTickerParams](../../../../interfaces/API/Procedures/Types/ReserveTickerParams/ReserveTickerParams.md)
- [RevokeClaimsParams](../../../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)
- [RotatePrimaryKeyParams](../../../../interfaces/API/Procedures/Types/RotatePrimaryKeyParams/RotatePrimaryKeyParams.md)
- [ScopeClaimProof](../../../../interfaces/API/Procedures/Types/ScopeClaimProof/ScopeClaimProof.md)
- [SetAllowanceParams](../../../../interfaces/API/Procedures/Types/SetAllowanceParams/SetAllowanceParams.md)
- [SetAssetDocumentsParams](../../../../interfaces/API/Procedures/Types/SetAssetDocumentsParams/SetAssetDocumentsParams.md)
- [SetAssetRequirementsParams](../../../../interfaces/API/Procedures/Types/SetAssetRequirementsParams/SetAssetRequirementsParams.md)
- [SetClaimCountTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md)
- [SetClaimPercentageTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md)
- [SetCountTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md)
- [SetCustodianParams](../../../../interfaces/API/Procedures/Types/SetCustodianParams/SetCustodianParams.md)
- [SetGroupPermissionsParams](../../../../interfaces/API/Procedures/Types/SetGroupPermissionsParams/SetGroupPermissionsParams.md)
- [SetPercentageTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetPercentageTransferRestrictionsParams/SetPercentageTransferRestrictionsParams.md)
- [SetPermissionGroupParams](../../../../interfaces/API/Procedures/Types/SetPermissionGroupParams/SetPermissionGroupParams.md)
- [SubsidizeAccountParams](../../../../interfaces/API/Procedures/Types/SubsidizeAccountParams/SubsidizeAccountParams.md)
- [TransactionsParams](../../../../interfaces/API/Procedures/Types/TransactionsParams/TransactionsParams.md)
- [TransferAssetOwnershipParams](../../../../interfaces/API/Procedures/Types/TransferAssetOwnershipParams/TransferAssetOwnershipParams.md)
- [TransferPolyxParams](../../../../interfaces/API/Procedures/Types/TransferPolyxParams/TransferPolyxParams.md)
- [TransferRestriction](../../../../interfaces/API/Procedures/Types/TransferRestriction/TransferRestriction.md)
- [TransferTickerOwnershipParams](../../../../interfaces/API/Procedures/Types/TransferTickerOwnershipParams/TransferTickerOwnershipParams.md)
- [TxGroupParams](../../../../interfaces/API/Procedures/Types/TxGroupParams/TxGroupParams.md)
- [UnlinkChildParams](../../../../interfaces/API/Procedures/Types/UnlinkChildParams/UnlinkChildParams.md)
- [WaivePermissionsParams](../../../../interfaces/API/Procedures/Types/WaivePermissionsParams/WaivePermissionsParams.md)

## Type Aliases

### AddAssetStatParams

Ƭ **AddAssetStatParams**: \{ `ticker`: `string`  } & [`AddCountStatParams`](Types.md#addcountstatparams) \| [`AddPercentageStatParams`](Types.md#addpercentagestatparams) \| [`AddClaimCountStatParams`](Types.md#addclaimcountstatparams) \| [`AddClaimPercentageStatParams`](Types.md#addclaimpercentagestatparams)

#### Defined in

[api/procedures/types.ts:117](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L117)

___

### AddClaimCountStatParams

Ƭ **AddClaimCountStatParams**: [`ClaimCountStatInput`](../../../Types/Types.md#claimcountstatinput) & \{ `type`: [`ScopedCount`](../../../../enums/Types/StatType/StatType.md#scopedcount)  }

#### Defined in

[api/procedures/types.ts:109](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L109)

___

### AddClaimCountTransferRestrictionParams

Ƭ **AddClaimCountTransferRestrictionParams**: [`ClaimCountTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md) & \{ `type`: [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount)  }

#### Defined in

[api/procedures/types.ts:205](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L205)

___

### AddClaimPercentageStatParams

Ƭ **AddClaimPercentageStatParams**: [`StatClaimIssuer`](../../../../interfaces/Types/StatClaimIssuer/StatClaimIssuer.md) & \{ `type`: [`ScopedBalance`](../../../../enums/Types/StatType/StatType.md#scopedbalance)  }

#### Defined in

[api/procedures/types.ts:113](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L113)

___

### AddClaimPercentageTransferRestrictionParams

Ƭ **AddClaimPercentageTransferRestrictionParams**: [`ClaimPercentageTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md) & \{ `type`: [`ClaimPercentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimpercentage)  }

#### Defined in

[api/procedures/types.ts:209](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L209)

___

### AddCountStatParams

Ƭ **AddCountStatParams**: [`AddCountStatInput`](../../../../interfaces/Types/AddCountStatInput/AddCountStatInput.md) & \{ `type`: [`Count`](../../../../enums/Types/StatType/StatType.md#count)  }

#### Defined in

[api/procedures/types.ts:101](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L101)

___

### AddCountTransferRestrictionParams

Ƭ **AddCountTransferRestrictionParams**: [`CountTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md) & \{ `type`: [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count)  }

#### Defined in

[api/procedures/types.ts:197](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L197)

___

### AddInstructionParams

Ƭ **AddInstructionParams**: \{ `legs`: [`InstructionLeg`](Types.md#instructionleg)[] ; `mediators?`: (`string` \| [`Identity`](../../../../classes/API/Entities/Identity/Identity.md))[] ; `memo?`: `string` ; `tradeDate?`: `Date` ; `valueDate?`: `Date`  } & \{ `endBlock?`: `BigNumber`  } \| \{ `endAfterBlock?`: `BigNumber`  }

#### Defined in

[api/procedures/types.ts:532](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L532)

___

### AddInstructionWithVenueIdParams

Ƭ **AddInstructionWithVenueIdParams**: [`AddInstructionParams`](Types.md#addinstructionparams) & \{ `venueId`: `BigNumber`  }

#### Defined in

[api/procedures/types.ts:575](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L575)

___

### AddPercentageStatParams

Ƭ **AddPercentageStatParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`Balance`](../../../../enums/Types/StatType/StatType.md#balance) |

#### Defined in

[api/procedures/types.ts:105](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L105)

___

### AddPercentageTransferRestrictionParams

Ƭ **AddPercentageTransferRestrictionParams**: [`PercentageTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md) & \{ `type`: [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage)  }

#### Defined in

[api/procedures/types.ts:201](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L201)

___

### AddRestrictionParams

Ƭ **AddRestrictionParams**\<`T`\>: `Omit`\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`AddCountTransferRestrictionParams`](Types.md#addcounttransferrestrictionparams) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`AddPercentageTransferRestrictionParams`](Types.md#addpercentagetransferrestrictionparams) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`AddClaimCountTransferRestrictionParams`](Types.md#addclaimcounttransferrestrictionparams) : [`AddClaimPercentageTransferRestrictionParams`](Types.md#addclaimpercentagetransferrestrictionparams), ``"type"``\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:62](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L62)

___

### AffirmAsMediatorParams

Ƭ **AffirmAsMediatorParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `expiry?` | `Date` |

#### Defined in

[api/procedures/types.ts:608](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L608)

___

### AffirmOrWithdrawInstructionParams

Ƭ **AffirmOrWithdrawInstructionParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `portfolios?` | [`PortfolioLike`](../../../Types/Types.md#portfoliolike)[] | (optional) Portfolios that the signer controls and wants to affirm the instruction or withdraw affirmation **`Note`** if empty, all the legs containing any custodied Portfolios of the signer will be affirmed/affirmation will be withdrawn, based on the operation. |

#### Defined in

[api/procedures/types.ts:599](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L599)

___

### CollectionKeyInput

Ƭ **CollectionKeyInput**: [`GlobalCollectionKeyInput`](../../../../interfaces/API/Procedures/Types/GlobalCollectionKeyInput/GlobalCollectionKeyInput.md) \| [`LocalCollectionKeyInput`](../../../../interfaces/API/Procedures/Types/LocalCollectionKeyInput/LocalCollectionKeyInput.md)

Global key must be registered. local keys must provide a specification as they are created with the NftCollection

#### Defined in

[api/procedures/types.ts:345](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L345)

___

### GetTransferRestrictionReturnType

Ƭ **GetTransferRestrictionReturnType**\<`T`\>: [`ActiveTransferRestrictions`](../../../../interfaces/Types/ActiveTransferRestrictions/ActiveTransferRestrictions.md)\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`CountTransferRestriction`](../../../../interfaces/Types/CountTransferRestriction/CountTransferRestriction.md) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`PercentageTransferRestriction`](../../../../interfaces/Types/PercentageTransferRestriction/PercentageTransferRestriction.md) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`ClaimCountTransferRestriction`](../../../../interfaces/Types/ClaimCountTransferRestriction/ClaimCountTransferRestriction.md) : [`ClaimPercentageTransferRestriction`](../../../../interfaces/Types/ClaimPercentageTransferRestriction/ClaimPercentageTransferRestriction.md)\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:84](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L84)

___

### InstructionLeg

Ƭ **InstructionLeg**: [`InstructionFungibleLeg`](../../../../interfaces/API/Procedures/Types/InstructionFungibleLeg/InstructionFungibleLeg.md) \| [`InstructionNftLeg`](../../../../interfaces/API/Procedures/Types/InstructionNftLeg/InstructionNftLeg.md)

#### Defined in

[api/procedures/types.ts:530](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L530)

___

### IssueNftParams

Ƭ **IssueNftParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `metadata` | [`NftMetadataInput`](Types.md#nftmetadatainput)[] |
| `portfolio?` | [`PortfolioLike`](../../../Types/Types.md#portfoliolike) |

#### Defined in

[api/procedures/types.ts:708](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L708)

___

### ModifyAssetParams

Ƭ **ModifyAssetParams**: \{ `fundingRound?`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: ``true`` ; `name`: `string`  } \| \{ `fundingRound?`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible`: ``true`` ; `name?`: `string`  } \| \{ `fundingRound`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: ``true`` ; `name?`: `string`  } \| \{ `fundingRound?`: `string` ; `identifiers`: [`SecurityIdentifier`](../../../../interfaces/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: ``true`` ; `name?`: `string`  }

#### Defined in

[api/procedures/types.ts:673](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L673)

___

### ModifyCaDefaultConfigParams

Ƭ **ModifyCaDefaultConfigParams**: \{ `defaultTaxWithholding`: `BigNumber` ; `targets?`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings?`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[]  } \| \{ `defaultTaxWithholding?`: `BigNumber` ; `targets`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings?`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[]  } \| \{ `defaultTaxWithholding?`: `BigNumber` ; `targets?`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[]  }

#### Defined in

[api/procedures/types.ts:821](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L821)

___

### ModifyClaimsParams

Ƭ **ModifyClaimsParams**: [`AddClaimsParams`](../../../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md) \| [`EditClaimsParams`](../../../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md) \| [`RevokeClaimsParams`](../../../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)

#### Defined in

[api/procedures/types.ts:421](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L421)

___

### ModifyComplianceRequirementParams

Ƭ **ModifyComplianceRequirementParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `conditions` | [`InputCondition`](../../../Types/Types.md#inputcondition)[] | array of conditions to replace the existing array of conditions for the requirement (identified by `id`). Conditions within a requirement are *AND* between them. This means that in order for a transfer to comply with this requirement, it must fulfill *ALL* conditions |
| `id` | `BigNumber` | ID of the Compliance Requirement |

#### Defined in

[api/procedures/types.ts:770](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L770)

___

### ModifyInstructionAffirmationParams

Ƭ **ModifyInstructionAffirmationParams**: [`InstructionIdParams`](../../../../interfaces/API/Procedures/Types/InstructionIdParams/InstructionIdParams.md) & \{ `operation`: [`Affirm`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#affirm) \| [`Withdraw`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#withdraw)  } & [`AffirmOrWithdrawInstructionParams`](Types.md#affirmorwithdrawinstructionparams) \| \{ `operation`: [`Reject`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#reject) \| [`RejectAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#rejectasmediator)  } & [`RejectInstructionParams`](Types.md#rejectinstructionparams) \| \{ `operation`: [`AffirmAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#affirmasmediator)  } & [`AffirmAsMediatorParams`](Types.md#affirmasmediatorparams) \| \{ `operation`: [`WithdrawAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#withdrawasmediator) \| [`RejectAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#rejectasmediator)  }

#### Defined in

[api/procedures/types.ts:612](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L612)

___

### ModifyOfferingTimesParams

Ƭ **ModifyOfferingTimesParams**: \{ `end`: `Date` \| ``null`` ; `start?`: `Date`  } \| \{ `end?`: `Date` \| ``null`` ; `start`: `Date`  } \| \{ `end`: `Date` \| ``null`` ; `start`: `Date`  }

#### Defined in

[api/procedures/types.ts:1044](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L1044)

___

### ModifyVenueParams

Ƭ **ModifyVenueParams**: \{ `description?`: `string` ; `type`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)  } \| \{ `description`: `string` ; `type?`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)  } \| \{ `description`: `string` ; `type`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)  }

#### Defined in

[api/procedures/types.ts:992](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L992)

___

### NftMetadataInput

Ƭ **NftMetadataInput**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `id` | `BigNumber` |
| `type` | [`MetadataType`](../../../../enums/API/Entities/MetadataEntry/Types/MetadataType/MetadataType.md) |
| `value` | `string` |

#### Defined in

[api/procedures/types.ts:702](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L702)

___

### RegisterMetadataParams

Ƭ **RegisterMetadataParams**: \{ `name`: `string` ; `specs`: [`MetadataSpec`](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md)  } \| \{ `details?`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails) ; `name`: `string` ; `specs`: [`MetadataSpec`](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md) ; `value`: `string`  }

#### Defined in

[api/procedures/types.ts:1163](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L1163)

___

### RejectInstructionParams

Ƭ **RejectInstructionParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `portfolio?` | [`PortfolioLike`](../../../Types/Types.md#portfoliolike) | (optional) Portfolio that the signer controls and wants to reject the instruction |

#### Defined in

[api/procedures/types.ts:592](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L592)

___

### RemoveAssetStatParams

Ƭ **RemoveAssetStatParams**: \{ `ticker`: `string`  } & [`RemoveCountStatParams`](Types.md#removecountstatparams) \| [`RemoveBalanceStatParams`](Types.md#removebalancestatparams) \| [`RemoveScopedCountParams`](Types.md#removescopedcountparams) \| [`RemoveScopedBalanceParams`](Types.md#removescopedbalanceparams)

#### Defined in

[api/procedures/types.ts:94](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L94)

___

### RemoveBalanceStatParams

Ƭ **RemoveBalanceStatParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`Balance`](../../../../enums/Types/StatType/StatType.md#balance) |

#### Defined in

[api/procedures/types.ts:128](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L128)

___

### RemoveCountStatParams

Ƭ **RemoveCountStatParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`Count`](../../../../enums/Types/StatType/StatType.md#count) |

#### Defined in

[api/procedures/types.ts:124](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L124)

___

### RemoveScopedBalanceParams

Ƭ **RemoveScopedBalanceParams**: [`StatClaimIssuer`](../../../../interfaces/Types/StatClaimIssuer/StatClaimIssuer.md) & \{ `type`: [`ScopedBalance`](../../../../enums/Types/StatType/StatType.md#scopedbalance)  }

#### Defined in

[api/procedures/types.ts:136](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L136)

___

### RemoveScopedCountParams

Ƭ **RemoveScopedCountParams**: [`StatClaimIssuer`](../../../../interfaces/Types/StatClaimIssuer/StatClaimIssuer.md) & \{ `type`: [`ScopedCount`](../../../../enums/Types/StatType/StatType.md#scopedcount)  }

#### Defined in

[api/procedures/types.ts:132](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L132)

___

### RotatePrimaryKeyToSecondaryParams

Ƭ **RotatePrimaryKeyToSecondaryParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `expiry?` | `Date` | (optional) when the generated authorization should expire |
| `permissions` | [`PermissionsLike`](../../../Types/Types.md#permissionslike) | - |
| `targetAccount` | `string` \| [`Account`](../../../../classes/API/Entities/Account/Account.md) | The Account that should function as the primary key of the newly created Identity. Can be ss58 encoded address or an instance of Account |

#### Defined in

[api/procedures/types.ts:489](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L489)

___

### SetAssetStatParams

Ƭ **SetAssetStatParams**\<`T`\>: `Omit`\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`AddCountStatParams`](Types.md#addcountstatparams) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`AddPercentageStatParams`](Types.md#addpercentagestatparams) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`AddClaimCountStatParams`](Types.md#addclaimcountstatparams) : [`AddClaimPercentageStatParams`](Types.md#addclaimpercentagestatparams), ``"type"``\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:140](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L140)

___

### SetMetadataParams

Ƭ **SetMetadataParams**: \{ `details?`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails) ; `value`: `string`  } \| \{ `details`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails)  }

#### Defined in

[api/procedures/types.ts:1159](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L1159)

___

### SetRestrictionsParams

Ƭ **SetRestrictionsParams**\<`T`\>: `Omit`\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`SetCountTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`SetPercentageTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetPercentageTransferRestrictionsParams/SetPercentageTransferRestrictionsParams.md) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`SetClaimCountTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md) : [`SetClaimPercentageTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md), ``"type"``\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:73](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L73)

___

### SetVenueFilteringParams

Ƭ **SetVenueFilteringParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `allowedVenues?` | `BigNumber`[] |
| `disallowedVenues?` | `BigNumber`[] |
| `enabled?` | `boolean` |

#### Defined in

[api/procedures/types.ts:1175](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/api/procedures/types.ts#L1175)
